# schema

./: Cargo.toml  README.md
.github/workflows/: ci.yml
schema/: Cargo.toml
schema-anthropic/: Cargo.toml
schema-anthropic/src/: lib.rs
schema-anthropic/tests/: anthropic.rs  doc_comments.rs
schema-derive/: Cargo.toml
schema-derive/src/: lib.rs
schema-openapi/: Cargo.toml
schema-openapi/src/: lib.rs
schema-wit/: Cargo.toml
schema-wit/src/: lib.rs
schema/src/: lib.rs
schema/tests/: basic.rs  collections.rs  doc_comments.rs
