[package]
name = "schema-anthropic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
schema = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
schema = { workspace = true }
