[package]
name = "schema-openapi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenAPI spec generation from schema types"
keywords.workspace = true
categories.workspace = true

[dependencies]
schema = { workspace = true }
serde_json = { workspace = true }
